fixed project aside padding on narrower screen widths

--- a/portfolio/static/sass/main.scss
+++ b/portfolio/static/sass/main.scss
@@ -254,6 +254,7 @@ img.mug {
     aside.project {
         float: none;
         width: inherit;
+        padding-right: 20px;
     }
 
     section.rotator {
